src/parser/Jmm.java
/* Jmm.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Jmm.java */
package parser;

import java.io.BufferedReader;
import java.io.FileReader;
import java.io.IOException;
import semantic.*;

public class Jmm/*@bgen(jjtree)*/implements JmmTreeConstants, JmmConstants {/*@bgen(jjtree)*/
  protected static JJTJmmState jjtree = new JJTJmmState();
    static int errorCount=0;

    public static void main(String args[]) throws ParseException {

    final String FILENAME = args[0];

    BufferedReader br = null;
    FileReader fr = null;

    try {
        fr = new FileReader(FILENAME);
        br = new BufferedReader(fr);

    } catch (IOException e) {
        e.printStackTrace();
    }

    Jmm myJmm = new Jmm(br);
    SimpleNode root = myJmm.Program();
    root.dump("");

    root.buildSymbolTable();
    root.symbolTable.dump();

 }

  static final public SimpleNode Program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ClassDeclaration();
{if ("" != null) return jjtn000;}
      jj_consume_token(0);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ClassDeclaration() throws ParseException {/*@bgen(jjtree) ClassDeclaration */
                          ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      jj_consume_token(CLASS);
      t1 = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EXTENDS:{
        jj_consume_token(EXTENDS);
        t2 = jj_consume_token(IDENTIFIER);
jjtn000.setExtends(t2.image);
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(OB);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case BOOLEAN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        VarDeclaration();
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        if (jj_2_1(2)) {
          MainDeclaration();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PUBLIC:{
            MethodDeclaration();
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      jj_consume_token(CB);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setName(t1.image);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void VarDeclaration() throws ParseException {/*@bgen(jjtree) VarDeclaration */
                        ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      t1 = Type();
      t2 = jj_consume_token(IDENTIFIER);
jjtn000.setIdentifier(t2.image); jjtn000.type = t1.image;
      jj_consume_token(SCM);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MainDeclaration() throws ParseException {/*@bgen(jjtree) MainDeclaration */
                         ASTMainDeclaration jjtn000 = new ASTMainDeclaration(JJTMAINDECLARATION);
                         boolean jjtc000 = true;
                         jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(OPRNT);
      jj_consume_token(STRING);
      jj_consume_token(OSQB);
      jj_consume_token(CSQB);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(CPRNT);
      jj_consume_token(OB);
      label_3:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_3;
        }
        VarDeclaration();
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case OB:
        case OPRNT:
        case NOT:
        case TRUE:
        case FALSE:
        case THIS:
        case NEW:
        case IDENTIFIER:
        case INTEGERLITERAL:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        Statement();
      }
      jj_consume_token(CB);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setIdentifier(t.image);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodDeclaration() throws ParseException {/*@bgen(jjtree) MethodDeclaration */
                           ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      jj_consume_token(PUBLIC);
      t1 = Type();
      t2 = jj_consume_token(IDENTIFIER);
      jj_consume_token(OPRNT);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case BOOLEAN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_5;
        }
ASTMethodArguments jjtn001 = new ASTMethodArguments(JJTMETHODARGUMENTS);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          MethodArgument();
          label_6:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case CM:{
              ;
              break;
              }
            default:
              jj_la1[6] = jj_gen;
              break label_6;
            }
            jj_consume_token(CM);
            MethodArgument();
          }
        } catch (Throwable jjte001) {
if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
        }
      }
      jj_consume_token(CPRNT);
      jj_consume_token(OB);
      label_7:
      while (true) {
        if (jj_2_3(2)) {
          ;
        } else {
          break label_7;
        }
        VarDeclaration();
      }
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case OB:
        case OPRNT:
        case NOT:
        case TRUE:
        case FALSE:
        case THIS:
        case NEW:
        case IDENTIFIER:
        case INTEGERLITERAL:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_8;
        }
        Statement();
      }
      jj_consume_token(RETURN);
      Expression();
ASTReturn jjtn002 = new ASTReturn(JJTRETURN);
                                boolean jjtc002 = true;
                                jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(SCM);
      } finally {
if (jjtc002) {
                                  jjtree.closeNodeScope(jjtn002,  1);
                                }
      }
      jj_consume_token(CB);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setName(t2.image);
        jjtn000.type = t1.image;
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodArgument() throws ParseException {/*@bgen(jjtree) MethodArgument */
                        ASTMethodArgument jjtn000 = new ASTMethodArgument(JJTMETHODARGUMENT);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      t1 = Type();
      t2 = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
jjtn000.setIdentifier(t2.image); jjtn000.type = t1.image;
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//LOOKAHEAD 2
  static final public Token Type() throws ParseException {Token t;
    if (jj_2_4(2)) {
      t = jj_consume_token(INT);
      jj_consume_token(OSQB);
      jj_consume_token(CSQB);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:{
        t = jj_consume_token(BOOLEAN);
        break;
        }
      case INT:{
        t = jj_consume_token(INT);
        break;
        }
      case IDENTIFIER:{
        t = jj_consume_token(IDENTIFIER);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

//LOOKAHEAD 2
  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OB:{
      jj_consume_token(OB);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case OB:
        case OPRNT:
        case NOT:
        case TRUE:
        case FALSE:
        case THIS:
        case NEW:
        case IDENTIFIER:
        case INTEGERLITERAL:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_9;
        }
        Statement();
      }
      jj_consume_token(CB);
      break;
      }
    case IF:{
      If();
      break;
      }
    case WHILE:{
      While();
      break;
      }
    case OPRNT:
    case NOT:
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case IDENTIFIER:
    case INTEGERLITERAL:{
      if (jj_2_5(2)) {
        Assign();
      } else if (jj_2_6(2)) {
        ArrayAssign();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OPRNT:
        case NOT:
        case TRUE:
        case FALSE:
        case THIS:
        case NEW:
        case IDENTIFIER:
        case INTEGERLITERAL:{
          Expression();
          jj_consume_token(SCM);
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Assign() throws ParseException {/*@bgen(jjtree) Assign */
                ASTAssign jjtn000 = new ASTAssign(JJTASSIGN);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
jjtn000.identifier = t.image;
      jj_consume_token(EQLS);
      Expression();
      jj_consume_token(SCM);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ArrayAssign() throws ParseException {/*@bgen(jjtree) ArrayAssign */
                     ASTArrayAssign jjtn000 = new ASTArrayAssign(JJTARRAYASSIGN);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
jjtn000.identifier = t.image;
      jj_consume_token(OSQB);
ASTArrayIndex jjtn001 = new ASTArrayIndex(JJTARRAYINDEX);
                                                            boolean jjtc001 = true;
                                                            jjtree.openNodeScope(jjtn001);
      try {
        Expression();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                                              jjtree.clearNodeScope(jjtn001);
                                                              jjtc001 = false;
                                                            } else {
                                                              jjtree.popNode();
                                                            }
                                                            if (jjte001 instanceof RuntimeException) {
                                                              {if (true) throw (RuntimeException)jjte001;}
                                                            }
                                                            if (jjte001 instanceof ParseException) {
                                                              {if (true) throw (ParseException)jjte001;}
                                                            }
                                                            {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                                              jjtree.closeNodeScope(jjtn001, true);
                                                            }
      }
      jj_consume_token(CSQB);
      jj_consume_token(EQLS);
      Expression();
      jj_consume_token(SCM);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void While() throws ParseException {/*@bgen(jjtree) While */
  ASTWhile jjtn000 = new ASTWhile(JJTWHILE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(OPRNT);
      try {
        Expression();
        jj_consume_token(CPRNT);
      } catch (ParseException e) {
System.out.println(e.getMessage());
      Jmm.errorCount++;
      Token t;

      if(Jmm.errorCount>10){
          System.out.println(Jmm.errorCount + " errors: exiting program");
          System.exit(1);
        }

      do {
        t = getNextToken();
      } while (t.kind != CPRNT);
      }
      Statement();
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void If() throws ParseException {/*@bgen(jjtree) If */
  ASTIf jjtn000 = new ASTIf(JJTIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(OPRNT);
ASTCondition jjtn001 = new ASTCondition(JJTCONDITION);
                   boolean jjtc001 = true;
                   jjtree.openNodeScope(jjtn001);
      try {
        Expression();
      } catch (Throwable jjte001) {
if (jjtc001) {
                     jjtree.clearNodeScope(jjtn001);
                     jjtc001 = false;
                   } else {
                     jjtree.popNode();
                   }
                   if (jjte001 instanceof RuntimeException) {
                     {if (true) throw (RuntimeException)jjte001;}
                   }
                   if (jjte001 instanceof ParseException) {
                     {if (true) throw (ParseException)jjte001;}
                   }
                   {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                     jjtree.closeNodeScope(jjtn001, true);
                   }
      }
      jj_consume_token(CPRNT);
ASTThen jjtn002 = new ASTThen(JJTTHEN);
                                                   boolean jjtc002 = true;
                                                   jjtree.openNodeScope(jjtn002);
      try {
        Statement();
      } catch (Throwable jjte002) {
if (jjtc002) {
                                                     jjtree.clearNodeScope(jjtn002);
                                                     jjtc002 = false;
                                                   } else {
                                                     jjtree.popNode();
                                                   }
                                                   if (jjte002 instanceof RuntimeException) {
                                                     {if (true) throw (RuntimeException)jjte002;}
                                                   }
                                                   if (jjte002 instanceof ParseException) {
                                                     {if (true) throw (ParseException)jjte002;}
                                                   }
                                                   {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
                                                     jjtree.closeNodeScope(jjtn002, true);
                                                   }
      }
      jj_consume_token(ELSE);
ASTElse jjtn003 = new ASTElse(JJTELSE);
                                                                            boolean jjtc003 = true;
                                                                            jjtree.openNodeScope(jjtn003);
      try {
        Statement();
      } catch (Throwable jjte003) {
if (jjtc003) {
                                                                              jjtree.clearNodeScope(jjtn003);
                                                                              jjtc003 = false;
                                                                            } else {
                                                                              jjtree.popNode();
                                                                            }
                                                                            if (jjte003 instanceof RuntimeException) {
                                                                              {if (true) throw (RuntimeException)jjte003;}
                                                                            }
                                                                            if (jjte003 instanceof ParseException) {
                                                                              {if (true) throw (ParseException)jjte003;}
                                                                            }
                                                                            {if (true) throw (Error)jjte003;}
      } finally {
if (jjtc003) {
                                                                              jjtree.closeNodeScope(jjtn003, true);
                                                                            }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Expression() throws ParseException {
    And();
  }

  static final public void And() throws ParseException {
    Lt();
    label_10:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(AND);
ASTAnd jjtn001 = new ASTAnd(JJTAND);
                             boolean jjtc001 = true;
                             jjtree.openNodeScope(jjtn001);
      try {
        Lt();
      } catch (Throwable jjte001) {
if (jjtc001) {
                               jjtree.clearNodeScope(jjtn001);
                               jjtc001 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte001 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte001;}
                             }
                             if (jjte001 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte001;}
                             }
                             {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                               jjtree.closeNodeScope(jjtn001,  2);
                             }
      }
    }
  }

  static final public void Lt() throws ParseException {
    AddSub();
    label_11:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(LS);
ASTLessThan jjtn001 = new ASTLessThan(JJTLESSTHAN);
                                boolean jjtc001 = true;
                                jjtree.openNodeScope(jjtn001);
      try {
        AddSub();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                  jjtree.clearNodeScope(jjtn001);
                                  jjtc001 = false;
                                } else {
                                  jjtree.popNode();
                                }
                                if (jjte001 instanceof RuntimeException) {
                                  {if (true) throw (RuntimeException)jjte001;}
                                }
                                if (jjte001 instanceof ParseException) {
                                  {if (true) throw (ParseException)jjte001;}
                                }
                                {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                  jjtree.closeNodeScope(jjtn001,  2);
                                }
      }
    }
  }

  static final public void AddSub() throws ParseException {Token t;
    MultDiv();
    label_12:
    while (true) {
      if (jj_2_9(2)) {
        ;
      } else {
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLS:{
        t = jj_consume_token(PLS);
        break;
        }
      case MNS:{
        t = jj_consume_token(MNS);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      MultDiv();
ASTAddSub jjtn001 = new ASTAddSub(JJTADDSUB);
                                                             boolean jjtc001 = true;
                                                             jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001,  2);
                                                             jjtc001 = false;
jjtn001.setOp(t.image);
      } finally {
if (jjtc001) {
                                                               jjtree.closeNodeScope(jjtn001,  2);
                                                             }
      }
    }
  }
